--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -8,14 +8,18 @@
 // }
 html {
     -webkit-tap-highlight-color: transparent;
-    overflow-x: hidden;
+    overflow: hidden;
     background-color: transparent;
+    height: 100%;
 }
 
 body {
     color: #333;
     font-size: 14px;
     line-height: 1.5;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
     font-family: Microsoft Yahei, arial;
 }
 
@@ -497,5 +501,6 @@ input:-webkit-autofill {
 // ======
 .wrapper{
   width: 1200px;
-  margin: 20px auto;
+  margin-left: auto;
+  margin-right: auto;
 }
